- Fixed issue with cart align and hiding items.

--- a/src/styles/components/_cart.scss
+++ b/src/styles/components/_cart.scss
@@ -21,7 +21,6 @@
   &__row {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     margin: 0 auto;
     width: 430px;
     max-height: 750px;
